--- a/src/main/resources/static/css/indexStyles.css
+++ b/src/main/resources/static/css/indexStyles.css
@@ -5,10 +5,11 @@ html {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: var(--primary-color);
 }
 
 body {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: var(--primary-color);
 
     margin: 3.75rem 0 0 0;
     width: 100%;
@@ -43,13 +44,6 @@ body {
     font-size: 2.325rem; /* xx-large 기본값: 약 2rem */
     color: #ffffff;
     font-weight: bold;
-}
-
-html {
-    background-image: url("/background3.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
 }
 
 header {
