--- a/src/main/resources/templates/user/email_verification.html
+++ b/src/main/resources/templates/user/email_verification.html
@@ -60,7 +60,7 @@
             <div class="form_box">
                 <label class="label_bold" for="input_email">이메일 / E-MAIL</label>
                 <div class="input_box">
-                    <input type="email" class="send_code input_info" id="input_email" name="email" placeholder="이메일을 입력하세요." required>
+                    <input type="email" class="send_code input_info" id="input_email" name="userEmail" placeholder="이메일을 입력하세요." required>
                     <button type="button" id="send_code" class="side_btn" onclick="getEmailExists('input_email')">코드전송</button>
                 </div>
             </div>
