--- a/src/main/resources/templates/user/signin.html
+++ b/src/main/resources/templates/user/signin.html
@@ -39,10 +39,20 @@
 
         // source를 설정하고 폼을 생성하여 제출하는 함수
         function setSourceAndSubmit(source) {
-            sessionStorage.setItem('source', source);
+
+            console.log(source);
+
             const form = document.createElement('form');
+
             form.method = 'POST';
-            form.action = 'email_verification';
+            form.action = '/user/setSource';
+
+            const input = document.createElement('input');
+            input.type = 'hidden';
+            input.name = 'source';
+            input.value = source;
+            form.appendChild(input);
+
             document.body.appendChild(form);
             form.submit();
         }
@@ -89,11 +99,11 @@
                 <button type="submit" class="btn_login">로그인</button>
             </div>
             <div class="forgot_login">
-                <a href="email_verification" onclick="setSourceAndSubmit('signup')">회원가입</a>
+                <a href="#" onclick="setSourceAndSubmit('signup')">회원가입</a>
                 <span> / </span>
-                <a href="email_verification" onclick="setSourceAndSubmit('find_id')">아이디 찾기</a>
+                <a href="#" onclick="setSourceAndSubmit('find_id')">아이디 찾기</a>
                 <span> / </span>
-                <a href="email_verification" onclick="setSourceAndSubmit('reset_pwd')">비밀번호 재설정</a>
+                <a href="#" onclick="setSourceAndSubmit('reset_pwd')">비밀번호 재설정</a>
             </div>
         </form>
     </div>
