--- a/src/main/resources/templates/user/signin.html
+++ b/src/main/resources/templates/user/signin.html
@@ -99,7 +99,7 @@
                 <button type="submit" class="btn_login">로그인</button>
             </div>
             <div class="forgot_login">
-                <a href="#" onclick="setSourceAndSubmit('signup')">회원가입</a>
+                <a href="#" onclick="setSourceAndSubmit('signup_detail')">회원가입</a>
                 <span> / </span>
                 <a href="#" onclick="setSourceAndSubmit('find_id')">아이디 찾기</a>
                 <span> / </span>
