--- a/src/main/resources/templates/user/signup_detail.html
+++ b/src/main/resources/templates/user/signup_detail.html
@@ -68,7 +68,7 @@
 
             // 폼 제출 시 확인
             $('#goToLogin').on('click', function (event) {
-                if (!idChecked || !nicknameChecked) {
+                if (!idPossible || !nicknamePossible) {
                     event.preventDefault();
                     alert("아이디와 닉네임 중복 여부를 확인해주세요.");
                     return;
