--- a/src/main/resources/templates/health/auth.html
+++ b/src/main/resources/templates/health/auth.html
@@ -77,9 +77,10 @@
 
                 // 클릭 후 모달 띄우기 (순서 보장)
                 setTimeout(() => {
-                    if (checkbox.checked) {
-                        showModal(modalId);
-                    }
+                    // if (checkbox.checked) {
+                    //     showModal(modalId);
+                    // }
+                    showModal(modalId);
                 }, 50);
             });
         });
