--- a/src/main/resources/templates/user/reset_pwd.html
+++ b/src/main/resources/templates/user/reset_pwd.html
@@ -28,7 +28,7 @@
             }
 
             // 세션 스토리지에서 저장된 아이디를 가져오기
-            if (userId!=="null"){
+            if (referrer==="find_id" && userId!=="null"){
                 document.getElementById('input_id').value = userId;
             }
 
