--- a/src/main/resources/templates/user/find_id.html
+++ b/src/main/resources/templates/user/find_id.html
@@ -15,7 +15,7 @@
         let userId = /*[[${userId}]]*/ null;
         let userName = /*[[${userName}]]*/ null;
         let error = /*[[${msg}]]*/ null;
-        let SS_USER_ID = /*[[${SS_USER_ID}]]*/ null;
+        let SS_USER_ID = /*[[${session.SS_USER_ID}]]*/ null;
 
         // DOMContentLoaded 이벤트 리스너를 사용하여 DOM이 완전히 로드된 후에 실행되도록 설정
         $(document).ready(function () {
