--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -10,11 +10,17 @@
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script> <!-- JS 경로 수정 -->
     <script src="/js/setReferrer.js" defer></script>
-    <script>
-        $(document).ready(function () {
-           const SS_USER_ID = "<%= (String) session.getAttribute("SS_USER_ID") %>"
+    <script th:inline="javascript">
+        let userId = /*[[${userId}]]*/ null;
+        let error = /*[[${msg}]]*/ null;
+        let SS_USER_ID = /*[[${session.SS_USER_ID}]]*/ null;
+        let ref = /*[[${ref}]]*/ null;
 
-           if (SS_USER_ID && SS_USER_ID.trim() !== "null") {
+        $(document).ready(function () {
+
+            console.log(SS_USER_ID);
+
+           if (SS_USER_ID && SS_USER_ID.trim() != null) {
                document.getElementById("loginNav").style.display = "none";
            } else {
                document.getElementById("myPageNav").style.display = "none";
