--- a/src/main/resources/templates/user/reset_pwd.html
+++ b/src/main/resources/templates/user/reset_pwd.html
@@ -14,7 +14,7 @@
     <script th:inline="javascript">
         let userId = /*[[${userId}]]*/ null;
         let existYN = /*[[${existYN}]]*/ null;
-        let SS_USER_ID = /*[[${SS_USER_ID}]]*/ null;
+        let SS_USER_ID = /*[[${session.SS_USER_ID}]]*/ null;
 
         $(document).ready(function () {
 
